<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="employeeModel"
            type="com.dasarp.employeedetails.data.model.EmployeeModel" />
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/light_wight"
        android:padding="@dimen/margin_5"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <LinearLayout
            android:id="@+id/data_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_5"
                app:cardElevation="@dimen/margin_5"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_5"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_marginTop="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/emp_id"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{String.valueOf(employeeModel.id)}"
                            android:layout_gravity="center"
                            android:gravity="start|center"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/name"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/emp_name_editText"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:text="@{employeeModel.name}"
                            android:inputType="textCapWords"
                            android:background="@null"
                            android:clickable="false"
                            android:focusable="false"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center|start"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/email"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{employeeModel.email.toLowerCase()}"
                            android:layout_gravity="center"
                            android:textAllCaps="false"
                            android:singleLine="true"
                            android:autoLink="email"
                            android:linksClickable="true"
                            android:textColorLink="@color/blue"
                            android:gravity="start|center"
                            android:textSize="@dimen/text_medium"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/phone_number"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{employeeModel.phone}"
                            android:layout_gravity="center"
                            android:textAllCaps="false"
                            android:singleLine="true"
                            android:autoLink="phone"
                            android:linksClickable="true"
                            android:textColorLink="@color/blue"
                            android:gravity="start|center"
                            android:textSize="@dimen/text_medium"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/address"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@{employeeModel.addressModel.suite+`,`+employeeModel.addressModel.street+','+employeeModel.addressModel.city+`-`+employeeModel.addressModel.zipcode}"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_gravity="center"
                            android:gravity="start|center"
                            android:lineSpacingExtra="3dp"
                            android:layout_marginTop="@dimen/margin_5"
                            android:layout_marginStart="@dimen/margin_5"
                            android:layout_marginEnd="@dimen/margin_5"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/margin_5"
                app:cardElevation="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginEnd="@dimen/margin_10">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/margin_5"
                    android:layout_marginStart="@dimen/margin_5"
                    android:layout_marginEnd="@dimen/margin_5"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="120dp"
                        android:text="@string/company_details_colon"
                        android:textSize="@dimen/text_medium"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/company_name"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{employeeModel.companyModel.name}"
                            android:layout_gravity="center"
                            android:textAllCaps="false"
                            android:singleLine="true"
                            android:textColor="@color/black"
                            android:gravity="start|center"
                            android:textSize="@dimen/text_medium"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:minWidth="140dp"
                            android:text="@string/website"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/colon"
                            android:textSize="@dimen/text_medium"
                            android:textColor="@color/black"
                            android:layout_weight="0.1"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{employeeModel.website}"
                            android:textColorLink="@color/blue"
                            android:layout_gravity="center"
                            android:textAllCaps="false"
                            android:singleLine="true"
                            android:autoLink="web"
                            android:linksClickable="true"
                            android:gravity="start|center"
                            android:textSize="@dimen/text_medium"
                            android:layout_weight="1"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>